# paprika_v2

./: .editorconfig  compose.dev.yaml  justfile
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  conftest.py  justfile  manage.py  pyproject.toml  ruff.toml
backend/apps/auth/api/: schemas.py  urls.py  views.py
backend/apps/auth/tests/api/: test_login.py  test_logout.py  test_refresh.py
backend/apps/users/: admin.py  forms.py  managers.py  models.py  tests.py  validators.py
backend/apps/users/api/: schemas.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
backend/apps/users/tests/: factories.py
backend/apps/users/tests/api/: test_avatar.py  test_detail.py  test_list_create.py  test_me.py
backend/apps/users/tests/unit/: test_admin.py  test_managers.py  test_models.py  test_validators.py
backend/paprika/: asgi.py  settings.py  urls.py  wsgi.py
backend/paprika/settings/: __init__.py
backend/paprika/settings/components/: api.py  common.py
backend/paprika/settings/environments/: __init__.py  development.py  local.py.template  production.py
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  client.ts  schema.ts  users.ts
frontend/src/assets/styles/: base.css  variables.css
frontend/src/components/layout/: AppLayout.vue
frontend/src/composables/: useTheme.ts
frontend/src/router/: guards.ts  index.ts
frontend/src/stores/: auth.ts  ui.ts  users.ts
frontend/src/types/: api.ts
frontend/src/views/: LoginView.vue  NotFoundView.vue  UserFormView.vue  UsersListView.vue
