[project]
name = "paprika"
version = "0.1.0"
description = "Backend for Paprika - simple VFX task tracker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-modern-rest[jwt,msgspec,openapi,pydantic]>=0.11.0",
    "django-split-settings>=1.3.2",
    "environs>=15.0.1",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]

[tool.uv]
package = false
