[project]
name = "paprika"
version = "0.1.0"
description = "Backend for Paprika - simple VFX task tracker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-modern-rest[jwt,msgspec,openapi,pydantic]>=0.11.0",
    "django-split-settings>=1.3.2",
    "environs>=15.0.1",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.21",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "paprika.settings"
python_files = ["test_*.py"]
addopts = "--import-mode=importlib -ra"
testpaths = ["apps"]
